@@ -1059,7 +1059,8 @@ if ('outerHTML' in document.createElement('div')) {
     content = Object.toHTML(content);
     var parent = element.parentNode, tagName = parent.tagName.toUpperCase();
     
-    if (Element._insertionTranslations.tags[tagName]) {
+    /* Avoid outerHTML for IE because it incorrectly removes the replaced elements childNodes */
+    if (Element._insertionTranslations.tags[tagName] || Prototype.Browser.IE) {
       var nextSibling = element.next();
       var fragments = Element._getContentFromAnonymousElement(tagName, content.stripScripts());
       parent.removeChild(element);
